--- a/src/obsidian_tears_image_processor_backend/package.json
+++ b/src/obsidian_tears_image_processor_backend/package.json
@@ -1,9 +1,11 @@
 {
-    "name": "obsidian_tears_image_processor_backend",
-    "version": "0.0.0",
-    "private": true,
-    "type": "module",
-    "dependencies": {
-        "azle": "^0.19.0"
-    }
+  "name": "obsidian_tears_image_processor_backend",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "dependencies": {
+    "azle": "latest",
+    "express": "latest",
+    "@types/express": "latest"
+  }
 }
